--- a/src/css/SidebarOption.css
+++ b/src/css/SidebarOption.css
@@ -5,8 +5,28 @@
 	height: 40px;
 	cursor: pointer;
 	transition: 200ms color ease-in;
+	display: flex;
+	align-items: center;
+}
+
+.sidebar hr{
+	border: 1px solid #282828;
+	width: 90%;
+	margin: 10px auto;
 }
 
 .sidebarOption:hover{
 	color: #fff;
+}
+
+.sibebarOption-icon{
+	/* margin-right: 12px; */
+	margin-left: 10px;
+	margin-right: 10px;
+}
+
+.sidebarOption p{
+	margin-top: 10px;
+	margin-left: 20px;
+	font-size: 14px;
 }
