--- a/src/css/Footer.css
+++ b/src/css/Footer.css
@@ -8,7 +8,7 @@
 	padding: 20px;
 	display: flex;
 	justify-content: space-between;
-	box-sizing: content-box;
+	/* box-sizing: content-box; */
 }
 
 .footer-left{
